src/test/deca/context/valid/print_compare01.deca
// Description:
//    Affectation et comparaison
//
// Resultats:
//      Hello
//
// Historique:
//    cree le 01/01/2023

{
   int x = 4;
   if(x==null){
        print("Hello");
   }
}
