src/test/deca/context/invalid/op_not_mismatch.deca
// Description:
//     Operateur not avec une valeur non booleenne.
//
// Resultats:
//    Ligne 11: Operator Not type mismatch
//
// Historique:
//    cree le 01/01/2023

{
   boolean x = !4;
}
